# Web_Scraper

./: docker-compose.yml  web_scrape_project.txt
backend/: Dockerfile  pyproject.toml
backend/backend_api/: api.py  models.py
backend/backend_api/alembic/: env.py
backend/backend_api/alembic/versions/: 36be19a01bfe_uuid.py  8f53167fbe11_image_type_from_datetime_to_string.py  cda0da0b31e1_sequence_int.py
backend/backend_api/routers/: web_scraper_router.py
backend/backend_api/services/: WebScraper.py
backend/utils/: databases.py
templates/: form.html  results.html
